cambios estructura e imagen de fondo para banner

--- a/index.html
+++ b/index.html
@@ -11,27 +11,61 @@
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="./pages/contacto.html"></a>Contacto</li>
-                <li><a href=""></a></li>
-            </ul>
-        </nav>
+        <div class="banner">
+            <h1 class="titulo">Celulares</h1>
+            <nav class="navegacion">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <section>
-
+        <section class="subtitulo">
+            <h2>Subtitulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum velit eveniet, harum adipisci fugiat
+                necessitatibus quas nostrum voluptatem culpa praesentium! Reiciendis ut mollitia magnam ad placeat ab,
+                enim beatae voluptatibus.</p>
         </section>
         <section>
-
-        </section>
-        <section>
-
+            <div class="card">
+                <img src="" alt="">
+                <h3>Celular 1</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero amet molestiae corrupti. Fugit
+                    mollitia maxime voluptates sunt quae aspernatur ea quaerat dolorem? Harum ab autem omnis aliquam
+                    reprehenderit nam consequuntur?</p>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <h3>Celular 2</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto illum facere eum quo iste nesciunt
+                    animi error quisquam voluptates repellat suscipit quasi voluptas eligendi, molestiae ipsam,
+                    perferendis ab harum dolorem!</p>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <h3>Celular 3</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut eligendi vero deserunt ratione laborum
+                    obcaecati ad veniam odio modi corrupti. Sit totam officiis earum rerum iste a? Id, distinctio
+                    dolores?</p>
+            </div>
         </section>
     </main>
     <footer>
-
+        <div>
+            <ul>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">facebook</a></li>
+                <li><a href="">linkedin</a></li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li><a href="">Correo</a></li>
+                <li><a href="">Whatsapp</a></li>
+            </ul>
+        </div>
     </footer>
 
 </body>
