--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/0e86cbee02.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./assets/img/mobile-screen-solid.svg">
     <title>Practica Desarrollo Web UNTREF - Inicio</title>
 </head>
 
 <body>
     <header>
-        <div class="banner">
-            <h1 class="titulo">Celulares</h1>
-            <nav class="navegacion">
+        <div class="Titulo">
+            <h1>Celulares</h1>
+            <nav>
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="./pages/contacto.html">Contacto</a></li>
@@ -21,6 +23,7 @@
             </nav>
         </div>
     </header>
+
     <main>
         <section class="subtitulo">
             <h2>Subtitulo</h2>
@@ -53,17 +56,19 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="footer-link">
             <ul>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">facebook</a></li>
-                <li><a href="">linkedin</a></li>
+                <li><a href="https://www.Instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i>
+                        Instagram</a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i>
+                        Facebook</a></li>
+                <li><a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i>
+                        Linkedin</a></li>
             </ul>
-        </div>
-        <div>
             <ul>
-                <li><a href="">Correo</a></li>
-                <li><a href="">Whatsapp</a></li>
+                <li><a href="mailto:julianpoltronieri@gmail.com"><i class="fa-regular fa-envelope"></i> Correo</a></li>
+                <li><a href="https://wa.me/555666777?text=Hola!" target="_blank"><i class="fa-brands fa-whatsapp"></i>
+                        Whatsapp</a></li>
             </ul>
         </div>
     </footer>
