cambios en cards con flex

--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
                 enim beatae voluptatibus.</p>
         </section>
 
-        <section>
+        <section class="contenedor-cards">
             <div class="card">
-                <img src="" alt="">
-                <h3>Celular 1</h3>
+                <img src="./assets/img/c115.jpg" alt="motorola c115">
+                <h3>Motorola</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero amet molestiae corrupti. Fugit
                     mollitia maxime voluptates sunt quae aspernatur ea quaerat dolorem? Harum ab autem omnis aliquam
                     reprehenderit nam consequuntur?</p>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h3>Celular 2</h3>
+                <img src="./assets/img/3220.jpg" alt="Nokia 3220">
+                <h3>Nokia</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto illum facere eum quo iste nesciunt
                     animi error quisquam voluptates repellat suscipit quasi voluptas eligendi, molestiae ipsam,
                     perferendis ab harum dolorem!</p>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h3>Celular 3</h3>
+                <img src="./assets/img/t290.jpg" alt="Sony Ericsson t290">
+                <h3>Sony Ericsson</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut eligendi vero deserunt ratione laborum
                     obcaecati ad veniam odio modi corrupti. Sit totam officiis earum rerum iste a? Id, distinctio
                     dolores?</p>
